added some more things to the character class, changed continuescreen so it used them